--- a/stylua.toml
+++ b/stylua.toml
@@ -2,3 +2,4 @@ indent_type = "Spaces"
 indent_width = 2
 column_width = 120
 # collapse_simple_statement = "Always"
+# TODO: turn on this option & format all
